Changes to support Apache Kafka 4.0
* Also upgrades Kroxylicious Junit Ext to 0.11.0

Signed-off-by: Keith Wall <kwall@apache.org>